swagger entidad patient
